--- a/web/main.html
+++ b/web/main.html
@@ -22,8 +22,10 @@
             <input class ="mr-1" type="checkbox" name="filter" value="yahoo_ranking" id="checkbox2" /><label for="checkbox2"> ヤフショ売れ筋ランキング</label>
             <br>
             <input class ="mr-1" type="checkbox" name="filter" value="yahoo_category_ranking" id="checkbox3" /><label for="checkbox3">ヤフショカテゴリーランキング</label>
-            <!-- <br> -->
-            <!-- <input class ="mr-1" type="checkbox" name="filter" value="category" id="checkbox4" /><label for="checkbox4">カテゴリー</label> -->
+            <br>
+            <input class ="mr-1" type="checkbox" name="filter" value="category" id="checkbox4" /><label for="checkbox4">カテゴリー検索</label>
+            <br>
+            <input class ="mr-1" type="checkbox" name="filter" value="fetch_asin_by_url" id="checkbox5" /><label for="checkbox5">URLからASIN取得</label>
         </form>
     </div>
     <button id="search" class="bg-primary text-white border-primary rounded-pill">実行</button>
